--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 <meta name="viewport" content="user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, minimal-ui">
 <title>Images</title>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+
 <script src="https://cytoscape.github.io/cytoscape.js/api/cytoscape.js-latest/cytoscape.min.js"></script>
+<script src="https://cpettitt.github.io/project/dagre/latest/dagre.min.js"></script>
 <script src="code.js"></script>
 </head>
 <body>
