First pages commit

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 <script src="code.js"></script>
 </head>
 <body>
+<div>
 KEY: <br>
 task note name: <i>task</i>_<i>row</i>_<i>col</i>_<i>instance_no</i> <br>
 edge label: <i>token name</i>_<i>buffer location id</i>_<i>value</i> <br>
+</div>
 <div id="cy"></div>
 </body>
 </html>
