--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 <body>
 <div>
-KEY: <br>
-task note name: <i>task</i>_<i>row</i>_<i>col</i>_<i>instance_no</i> <br>
-edge label: <i>token name</i>_<i>buffer location id</i>_<i>value</i> <br>
+<b>KEY: </b> <br>
+task node name is encoded as : <i>task</i>_<i>row</i>_<i>col</i>_<i>instance_no</i> <br>
+edge label encoded as : <i>token name</i>_<i>buffer location id</i>_<i>value</i> <br>
 </div>
 <div id="cy"></div>
 </body>
