some little edits

--- a/index.html
+++ b/index.html
@@ -18,5 +18,8 @@ task node name is encoded as : <i>task</i>_<i>row</i>_<i>col</i>_<i>instance_no<
 edge label encoded as : <i>token name</i>_<i>buffer location id</i>_<i>value</i> <br>
 </div>
 <div id="cy"></div>
+<div>
+(c) MSRC - Koc University
+</div>
 </body>
 </html>
