--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link href="style.css" rel="stylesheet" />
 <meta charset=utf-8 />
 <meta name="viewport" content="user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, minimal-ui">
-<title>Sparse matrix task instance dependency graph</title>
+<title>Sparse matrix task instance dependency graph (c) 2015 MSRC - Koc University </title>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 
 <script src="https://cytoscape.github.io/cytoscape.js/api/cytoscape.js-latest/cytoscape.min.js"></script>
@@ -18,8 +18,6 @@ task node name is encoded as : <i>task</i>_<i>row</i>_<i>col</i>_<i>instance_no<
 edge label encoded as : <i>token name</i>_<i>buffer location id</i>_<i>value</i> <br>
 </div>
 <div id="cy"></div>
-<div>
-(c) MSRC - Koc University
-</div>
+
 </body>
 </html>
